Feature: Use nickname and password to login

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,19 +16,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <div class="user-form" id="username-page">
-      <h2>Enter Chatroom</h2>
-      <form id="usernameForm">
-        <label for="nickname">Nickname:</label>
-        <input type="text" id="nickname" name="nickname" required />
-
-        <label for="fullname">Real Name:</label>
-        <input type="text" id="fullname" name="realname" required />
-
-        <button type="submit">Enter Chatroom</button>
-      </form>
-    </div>
-    <div class="container hidden">
+    <div class="container">
       <div class="row clearfix">
         <div class="col-lg-12">
           <div class="card chat-app">
@@ -45,32 +33,7 @@
                   placeholder="Search..."
                 />
               </div>
-              <ul class="list-unstyled chat-list mb-0 mt-2">
-                <li class="clearfix active" id="aiden">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar2.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Aiden Chavez</div>
-                    <div class="status">
-                      <i class="fa fa-circle online"></i> online
-                    </div>
-                  </div>
-                </li>
-                <li class="clearfix" id="chavez">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar2.png"
-                    alt="avatar"
-                  />
-                  <div class="about">
-                    <div class="name">Aiden Chavez</div>
-                    <div class="status">
-                      <i class="fa fa-circle online"></i> online
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              <ul class="list-unstyled chat-list mb-0 mt-2"></ul>
             </div>
             <div class="chat">
               <div class="chat-header clearfix">
@@ -88,39 +51,13 @@
                       />
                     </a>
                     <div class="chat-about">
-                      <h6 class="m-b-0 chat-name">Aiden Chavez</h6>
+                      <h6 class="m-b-0 chat-name"></h6>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="chat-history">
-                <ul class="m-b-0">
-                  <li class="clearfix">
-                    <div class="message-data text-right">
-                      <span class="message-data-time">10:10 AM, Today</span>
-                    </div>
-                    <div class="message my-message float-right">
-                      Hi Aiden, how are you? How is the project coming along?
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <span class="message-data-time">10:12 AM, Today</span>
-                    </div>
-                    <div class="message other-message">
-                      Are we meeting today?
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data text-right">
-                      <span class="message-data-time">10:15 AM, Today</span>
-                    </div>
-                    <div class="message my-message float-right">
-                      Project has been already finished and I have results to
-                      show you.
-                    </div>
-                  </li>
-                </ul>
+                <ul class="m-b-0"></ul>
               </div>
               <form class="chat-message clearfix hidden">
                 <div class="input-group mb-0">
