Feature: Videocall between two user

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <link
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       rel="stylesheet"
     />
     <div class="container">
@@ -54,6 +54,11 @@
                       <h6 class="m-b-0 chat-name"></h6>
                     </div>
                   </div>
+                  <div class="col call-btn hidden">
+                    <button>
+                      <i class="fa-solid fa-phone"></i>
+                    </button>
+                  </div>
                 </div>
               </div>
               <div class="chat-history">
@@ -74,7 +79,7 @@
         </div>
       </div>
     </div>
-    <script src="js/script.js"></script>
+     <script src="js/script.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
