--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,14 +64,18 @@
               <div class="chat-history">
                 <ul class="m-b-0"></ul>
               </div>
-              <form class="chat-message clearfix hidden">
+              <form class="chat-message clearfix">
                 <div class="input-group mb-0">
+                  <label for="image-file" class="custom-image-upload">
+                    <i class="fa-solid fa-image"></i>
+                  </label>
+                  <input id="image-file" type="file" />
                   <input
                     type="text"
                     class="form-control message-input"
                     placeholder="Enter text here..."
                   />
-                  <button><i class="fa fa-send"></i></button>
+                  <button><i class="fa-solid fa-share"></i></button>
                 </div>
               </form>
             </div>
@@ -79,7 +83,7 @@
         </div>
       </div>
     </div>
-     <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
@@ -99,6 +103,7 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript"></script>
   </body>
 </html>
