--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <!-- <script src="js/script.js"></script> -->
+     <script src="js/script.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
